add letter to html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <p>This letter is to inform you that following the submission of your application form, you are hereby scheduled to appear in the first stage of the <span>MOOI JOB INTERVIEW</span> for the post of <span class="job"></span> on the 22nd of June 2023 at 9AM PROMPT. You are to bring along with you, your laptop and a hardware copy of the Curriculum Vitae you submitted in the form. More information on this interview will be sent to your phone number: <span class="tel-number"></span> and email: <span class="email"></span>.</p>
 
 
-
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aliquid asperiores est officiis necessitatibus? Illum repellat iusto dolor minus blanditiis.
 
         <p>Kind Regards,</p>
         <ul class="close-salute">
