--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="contain bg-light mt-3 mb-5">
         <form  id="formOne">
             <div class="d-flex mt-4">
-                <img src="img/pexels-magda-ehlers-1337380.jpg" alt="">
+                <img src="img/pexels-magda-ehlers-1337380.jpg" alt="Logo">
                 <h1 class="text-center text-info">APPLICATION FORM</h1>
             </div>
             <h4>Ensure you fill in your correct information in the fields below.</h4>
@@ -93,7 +93,7 @@
 
     <div class="container bg-light pb-2" id="letter">
         <div class="d-flex mt-4 pt-4 justify-content-center">
-            <img src="img/pexels-magda-ehlers-1337380.jpg" alt="">
+           <img src="img/pexels-magda-ehlers-1337380.jpg" alt="Logo">
            <h1 class="text-success">APPLICATION LETTER</h1>
         </div>
         <ul class="adress">
